force-app/main/default/objects/Template_Button__c/Template_Button__c.object-meta.xml
<CustomObject>
    <label>Template Button</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Template Button Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>