force-app/main/default/objects/Template_Button__c/fields/Button_text__c.field-meta.xml
<CustomField>
    <fullName>Button_text__c</fullName>
    <label>Button text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>