force-app/main/default/objects/Template_Button__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <label>Button Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>