force-app/main/default/objects/Template_Button__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Template_Object__c</referenceTo>
    <relationshipLabel>Template Button</relationshipLabel>
    <relationshipName>Template_Buttons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>