force-app/main/default/objects/Template_Button__c/fields/Type_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Action__c</fullName>
    <label>Type of Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>