force-app/main/default/objects/Template_Button__c/fields/URL_Type__c.field-meta.xml
<CustomField>
    <fullName>URL_Type__c</fullName>
    <label>URL Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>