force-app/main/default/objects/Template_Button__c/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <label>Website URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>